# meals-api

./: .pre-commit-config.yaml  pyproject.toml
app/: main.py
app/api/: ingredient_nutrient_link.py  ingredients.py  meals.py  nutrients.py  util.py
app/models/: ingredient.py  ingredient_nutrient_link.py  meal.py  meal_ingredient_link.py  nutrient.py
test/: conftest.py
test/api/: test_add_ingredient.py  test_add_ingredient_nutrient_link.py  test_add_meal.py  test_add_nutrient.py  test_get_ingredients.py  test_get_meals.py  test_get_nutrients.py  test_ingredients.py  test_meals.py  test_read_ingredients.py  test_read_meals.py  test_update_meal.py
test/models/: test_ingredient.py  test_ingredient_nutrient_link.py  test_meal.py  test_meal_ingredient_link.py  test_nutrient.py
