[tool.poetry]
name = "meals-api"
version = "0.1.0"
description = ""
authors = ["Andrew Hynes <andrewjhynes@gmail.com>"]
readme = "README.md"
packages = [{include = "meals_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
requests = "^2.31.0"
httpx = "^0.24.1"


[tool.poetry.group.static_analysis.dependencies]
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
