[tool.poetry]
name = "meals-api"
version = "0.1.0"
description = ""
authors = ["Andrew Hynes <andrewjhynes@gmail.com>"]
readme = "README.md"
packages = [{include = "meals_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
psycopg2-binary = "^2.9.6"
sqlmodel = "^0.0.8"
uvicorn = "^0.22.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"
pytest = "^7.3.2"
requests = "^2.31.0"

[tool.poetry.group.static_analysis.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
